2007-01-23  Sven Neumann  <sven@gimp.org>

	* app/widgets/dbus-service.xml: added Activate method.

	* app/widgets/gimpdbusservice.[ch]: raise the toolbox from the
	Activate method. Do nothing when no URIs are passed 

	* app/main.c: try the Activate method on the org.gimp.GIMP service
	when being called without any filenames on the command-lines.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/main.c: simplified handling of d-bus errors.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.[ch]: added utility function that handles
	opening files passed on the command-line.

	* app/app_procs.c
	* app/widgets/gimpdbusservice.c: use the new function instead of
	duplicating the code.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixbuf.c (gimp_pixbuf_from_data): free the thumbnail
	data that used to be leaked for grayscale thumbnails.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpui.c (gimp_ui_init): no need to construct (and leak)
	command-line arguments when initializing GTK+.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/paint/gimppaintbrush.c: added some comments.

	* app/paint/gimppaintcore.c: sprinkled with const qualifiers.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdatafactoryview.c: don't add the open-as-image
	button to all data factory views.

	* app/widgets/gimppatternfactoryview.c: but do it here for the
	Pattern dialog.

2007-01-22  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/script-fu/scripts/guides-new-percent.scm: replaced
	license statement according to bug #119667.

2007-01-21  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpdrawtool.[ch]: maintain an is_drawn boolean which
	indicates whether the drawn stuff is currently visible. Added
	gimp_draw_tool_is_drawn() to obtain it.

	* app/tools/gimpbrushtool.c (gimp_brush_tool_draw): don't create
	the brush outline segments for the purpose of undrawing (if we